<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context=".basket.BasketFragment">

    <!-- TODO: Update blank fragment layout -->


    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_product"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

    </android.support.v7.widget.RecyclerView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/basket_all_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/cast"
                android:textSize="40sp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorAccent">

                <Button
                    android:id="@+id/clear_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:text="@string/clear_basket"
                    android:textColor="@color/colorAccent"
                    android:textSize="35sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorPrimaryDark">

                <Button
                    android:id="@+id/create_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:text="@string/create_order"
                    android:textColor="@color/colorPrimary"
                    android:textSize="35sp" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>